[gd_scene load_steps=5 format=2]

[ext_resource path="res://root.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/mono_14.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://commons/pull_panel/pull_panel.tscn" type="PackedScene" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -13.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExampleContainer" type="PanelContainer" parent="HSplitContainer"]
margin_right = 947.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeContainer" type="TabContainer" parent="HSplitContainer"]
margin_left = 959.0
margin_right = 1907.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Code" type="TextEdit" parent="HSplitContainer/CodeContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "# Scripts from examples will show up here :) # Scripts from examples will show up here :)# Scripts from examples will show up here :)# Scripts from examples will show up here :)"
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
breakpoint_gutter = true
fold_gutter = true
selecting_enabled = false
wrap_enabled = true

[node name="PullPanel" parent="." instance=ExtResource( 4 )]
